<resources>
    <string name="app_name" translatable="false">Diamond Manager</string>
    <string name="lbl_btn_login">Iniciar Sesión</string>
    <string name="lbl_txt_userLogin">Usuario:</string>
    <string name="lbl_txt_passwd">Contraseña</string>
    <string name="image_desc">imagen usuario</string>
    <string name="lbl_btn_manager">Gestión de diamantes</string>
    <string name="lb_btn_gallery">Ver Galería</string>
    <string name="lbl_list_listafav">Agregados recientemente</string>
    <string name="fi_formulario_ins">Fomrulario de Inserción</string>
    <string name="fi_nombre">Nombre:</string>
    <string name="fi_nuevo_diamante">Insertando nuevo Diamante</string>
    <string name="menu_princ">Menú principal</string>
    <string name="crear_diam">Crear nuevo</string>
    <string name="actualizar_diam">Actualizar diamante</string>
    <string name="eliminar_diam">Eliminar diamante</string>
    <string name="fi_quilate">Quilate (Carat)</string>
    <string name="fi_precio">Precio</string>
    <string name="fi_guardar">Guardar</string>
    <string name="fi_cancelar">Cancelar</string>
    <string name="lv_nuevo_diamante">Agregar diamante</string>
    <string name="lay_imagen_diamante">Imagen diamante</string>
    <string name="fi_paisOrigen">Origen:</string>
    <string name="lbl_editar">Editar</string>
    <string name="lbl_eliminar">Eliminar</string>
    <string name="lbl_origen">Origen</string>
    <string name="lbl_regresar">Atrás</string>
    <string name="lbl_filtrar">Filtrar Por:</string>
    <string name="fi_formulario_edit">Formulario de Actualización</string>
    <string name="fi_editar_diamante">Editando diamante</string>
    <string name="fi_guardar_cambios">Guardar Cambios</string>

</resources>
