<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/menu_background">

    <Button
            android:text="@string/fi_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancelar2"
            android:drawableStart="@drawable/ic_cancel_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/btn_guardar_edit"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/btn_guardar_edit"
            app:layout_constraintBottom_toBottomOf="@+id/btn_guardar_edit"/>
    <Button
            android:text="@string/fi_guardar_cambios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar_edit"
            android:backgroundTint="#C3084BE6" android:textColor="#FFFFFF"
            android:drawableStart="@drawable/ic_save_black_24dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="140dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.267"/>
    <Spinner
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:id="@+id/spinner_paises_edit"
            app:layout_constraintStart_toStartOf="@+id/spinner_corte_edit"
            app:layout_constraintEnd_toEndOf="@+id/spinner_corte_edit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_corte_edit"/>
    <Spinner
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:id="@+id/spinner_corte_edit"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_color_edit"
            app:layout_constraintEnd_toEndOf="@+id/spinner_color_edit"
            app:layout_constraintStart_toStartOf="@+id/spinner_color_edit"/>
    <Spinner
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:id="@+id/spinner_color_edit"
            app:layout_constraintStart_toStartOf="@+id/spinner_claridad_edit"
            app:layout_constraintEnd_toEndOf="@+id/spinner_claridad_edit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_claridad_edit"/>
    <Spinner
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:id="@+id/spinner_claridad_edit"
            android:spinnerMode="dropdown"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_precio_edit"
            app:layout_constraintStart_toStartOf="@+id/txt_precio_edit"
            app:layout_constraintEnd_toEndOf="@+id/txt_precio_edit"/>
    <EditText
            android:layout_width="209dp"
            android:layout_height="39dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_precio_edit"
            android:hint="@string/fi_precio" android:autofillHints="@string/fi_precio"
            app:layout_constraintStart_toStartOf="@+id/txt_quilate_edit"
            app:layout_constraintEnd_toEndOf="@+id/txt_quilate_edit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_quilate_edit"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="43dp"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/txt_quilate_edit"
            android:hint="@string/fi_quilate" android:autofillHints="@string/fi_quilate"
            app:layout_constraintStart_toStartOf="@+id/txt_nombre_diamante_edit"
            app:layout_constraintEnd_toEndOf="@+id/txt_nombre_diamante_edit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_diamante_edit"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_diamante_edit"
            android:autofillHints="@string/app_name" android:hint="@string/fi_nombre"
            app:layout_constraintStart_toStartOf="@+id/txt_titulo_edit"
            app:layout_constraintEnd_toEndOf="@+id/txt_titulo_edit" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_titulo_edit" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/fi_editar_diamante"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_titulo_edit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintVertical_bias="0.188" android:textSize="16sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/fi_formulario_edit"
            android:layout_width="225dp"
            android:layout_height="23dp"
            android:textStyle="bold"
            android:textColor="#000000" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/txv1_bar_edit"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="@+id/txv1_bar_edit"
            app:layout_constraintStart_toEndOf="@+id/txv1_bar_edit"
            app:layout_constraintVertical_bias="1.0" android:layout_marginStart="8dp"
            android:id="@+id/txv_menuPrinc_edit"/>
    <TextView
            android:layout_width="58dp"
            android:layout_height="30dp"
            android:id="@+id/txv1_bar_edit" android:background="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.036"/>
    <TextView
            android:layout_width="115dp"
            android:layout_height="30dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txv_menuPrinc_edit"
            app:layout_constraintBottom_toBottomOf="@+id/txv_menuPrinc_edit"
            app:layout_constraintStart_toEndOf="@+id/txv_menuPrinc_edit" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.333" app:layout_constraintVertical_bias="1.0"
            android:id="@+id/txv2_bar_edit"/>
</android.support.constraint.ConstraintLayout>