<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@drawable/wallpaper1">

    <Button
            android:id="@+id/btn_login"
            android:layout_width="137dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#00DA9393"
            android:backgroundTintMode="src_in"
            android:fontFamily="sans-serif"
            android:foregroundTint="#0022969B"
            android:text="@string/lbl_btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.681" app:layout_constraintHorizontal_bias="0.511"/>

    <EditText
            android:id="@+id/txt_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/lbl_txt_userLogin"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/lbl_txt_userLogin"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_account_box_black_24dp"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pass"
            app:layout_constraintEnd_toEndOf="@+id/txt_pass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_pass"
            android:drawableTintMode="add"/>

    <EditText
            android:id="@+id/txt_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/lbl_txt_passwd"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/lbl_txt_passwd"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"/>

    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="154dp"
            android:layout_height="146dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/image_desc"
            app:layout_constraintBottom_toTopOf="@+id/txt_user"
            app:layout_constraintEnd_toEndOf="@+id/txt_user"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="@+id/txt_user"
            app:srcCompat="@drawable/user"/>

</android.support.constraint.ConstraintLayout>