<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

    <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
            android:contentDescription="@string/lay_imagen_diamante"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="35dp" app:srcCompat="@drawable/ic_update_black_24dp"
            android:id="@+id/btn_lay_editar"
            android:contentDescription="@string/lay_imagen_diamante"
            android:layout_marginStart="335dp" android:backgroundTint="#75FFFFFF"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="35dp" app:srcCompat="@android:drawable/ic_delete"
            android:id="@+id/btn_lay_borrar"
            android:layout_marginTop="45dp"
            android:layout_marginStart="335dp" android:layout_marginBottom="-45dp"
            android:contentDescription="@string/eliminar_diam" android:backgroundTint="#8DFFFFFF"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="220dp"
            android:layout_height="100dp" tools:layout_editor_absoluteY="15dp" tools:layout_editor_absoluteX="15dp"
            android:layout_marginStart="100dp" android:id="@+id/rv_detalle_diamante">

        <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txv_lay_nombre" android:hint="@string/fi_nombre"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.292"/>
        <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txv_lay_origen" android:hint="@string/fi_paisOrigen"
                app:layout_constraintStart_toStartOf="@+id/txv_lay_nombre"
                app:layout_constraintEnd_toEndOf="@+id/txv_lay_nombre" android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/txv_lay_nombre" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/fi_nombre"
                android:layout_width="65dp"
                android:layout_height="19dp"
                android:id="@+id/lbl_nombre" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/fi_paisOrigen"
                android:layout_width="65dp"
                android:layout_height="19dp"
                android:id="@+id/lbl_pais"
                android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/lbl_nombre"
                app:layout_constraintStart_toStartOf="@+id/lbl_nombre"
                app:layout_constraintEnd_toEndOf="@+id/lbl_nombre" app:layout_constraintHorizontal_bias="0.0"
        />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>